# fastapi-example

./: .env  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  logging.conf  main.py  manifest.json  pyproject.toml
app/: app.py  logging_config.py
app/core/: dependencies.py  settings.py
app/models/: health.py  items.py
app/rabbitmq/: connection.py  listener.py  publisher.py  subscriber.py
app/routers/: health.py  items.py  notification.py
app/services/: health.py  items.py
tests/: test_app.py  test_health.py  test_notification.py
