[project]
name = "fastapi-example"
version = "0.1.0"
description = "Example Service based on FastAPI"
authors = [
    {name = "Leonid Shepetovsky", email = "leonid.shepetovsky@gmail.com"}
]
license = {text = "Proprietary"}
readme = "README.md"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.115.6,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
python-dotenv = ">=1.0.1,<2.0.0"
toml = ">=0.10.2,<0.11.0"
pydantic = ">=2.10.5,<3.0.0"
pydantic-settings = ">=2.7.1,<3.0.0"
aio-pika = ">=9.5.4,<10.0.0"
pika = ">=1.3.2,<2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-mock = "^3.14.0"

